Fix website links

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width">
 
-        <title>{{ site.title }}{% if page.title %} : {{ page.title }}{% endif %}</title>
+        <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
         <meta name="description" content="{{ site.subtitle }}">
 
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
