--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,3 +1,3 @@
-<h4><a class="brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+<h4><a class="brand" href="{{ site.baseurl }}/home">{{ site.title }}</a>
     {% if site.subtitle %}<small>{{ site.subtitle }}</small>{% endif %}
 </h4>
