Website landing page (3)

--- a/docs/_layouts/landing.html
+++ b/docs/_layouts/landing.html
@@ -17,7 +17,7 @@
     <body id="landing" style="display:table;height:100%;width:100%;margin:0px;">
         <div class="container" style="display:table-cell; vertical-align:middle;">
             <div id="content" align="center">
-                <img src="static/icon_foreground.png" width="45%">
+                <img src="static/icon_foreground.png" width="45%" style="max-width:500px">
                 {{ content }}
             </div>
         </div>
