--- a/docs/_layouts/landing.html
+++ b/docs/_layouts/landing.html
@@ -8,17 +8,30 @@
         <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
         <meta name="description" content="{{ site.subtitle }}">
 
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
         {% seo %}
     </head>
-    <body id="landing" style="display:table;height:100%;width:100%;margin:0px;">
-        <div class="container" style="display:table-cell; vertical-align:middle;">
-            <div id="content" align="center">
-                <img src="static/icon_foreground.png" width="45%" style="max-width:500px">
+    <body id="landing">
+        <div class="container" align="center">
+            <div>
+                <img src="static/icon_foreground.png" width="45%" style="max-width:400px">
+            </div>
+            <div id="content">
                 {{ content }}
+            </div>
+            <div class="row justify-content-sm-center">
+                <div class="col-xs-12 col-sm-auto"><a href="home">Documentation</a></div>
+                <div class="col-xs-12 col-sm-auto"><a href="about/changelog">Changelog</a></div>
+                <div class="col-xs-12 col-sm-auto"><a href="https://github.com/natario1/CameraView">GitHub</a></div>
+                <div class="col-xs-12 col-sm-auto"><a href="extra/donate">Support</a></div>
+            </div>
+            <br/>
+            <div class="row" id="screenshots">
+                <div class="col-sm-4"><img src="static/screen1.png"></div>
+                <div class="col-sm-4"><img src="static/screen2.png"></div>
+                <div class="col-sm-4"><img src="static/screen3.png"></div>
             </div>
         </div>
 
