Website landing page (5)

--- a/docs/_layouts/landing.html
+++ b/docs/_layouts/landing.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width">
 
-        <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
+        <title>{{ site.title }}</title>
         <meta name="description" content="{{ site.subtitle }}">
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
@@ -24,7 +24,7 @@
             <div class="row justify-content-sm-center">
                 <div class="col-xs-12 col-sm-auto"><a href="home">Documentation</a></div>
                 <div class="col-xs-12 col-sm-auto"><a href="about/changelog">Changelog</a></div>
-                <div class="col-xs-12 col-sm-auto"><a href="https://github.com/natario1/CameraView">GitHub</a></div>
+                <div class="col-xs-12 col-sm-auto"><a href="{{ site.codeurl }}">GitHub</a></div>
                 <div class="col-xs-12 col-sm-auto"><a href="extra/donate">Support</a></div>
             </div>
             <br/>
