Fix site header (3)

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -77,9 +77,13 @@ footer {
 
 /* drawer */
 
+.drawer-toggle {
+    background-color: transparent;
+    border-radius: 50%;
+}
+
 .drawer-toggle:hover {
     background-color: rgba(240, 240, 240, 0.25);
-    border-radius: 50%;
 }
 
 @media (max-width: 768px) {
