--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -4,8 +4,27 @@ layout: main
 
 <div class="page-header border-bottom has-divider pb-3">
     <h1 class="d-inline-block mt-1 mb-0 mr-2">{{ page.title }}</h1>
-    {% if page.description %}<span>{{ page.description }}</span>{% endif %}
+    {% if page.description %}<span class="mr-2">{{ page.description }}</span>{% endif %}
+    <span><a href="https://github.com/{{ site.author.github }}/{{ site.github_repo }}/edit/{{ site.github_branch }}/docs/{{ page.path }}">[edit this page]</a></span>
 </div>
-<div class="page mt-4">
+<div class="page my-4">
     {{ content }}
 </div>
+<div class="page-footer border-top has-divider">
+    <div class="row text-center">
+        {% assign next = page.order | plus: 1 %}
+        {% assign previous = page.order | minus: 1 %}
+        {% for other in site.categories[page.category] %}
+        {% if other.order == previous %}
+        <a class="previous col mt-3" href="{{ site.baseurl }}{{ other.url }}">< {{ other.title }}</a>
+        {% endif %}
+        {% endfor %}
+
+        {% for other in site.categories[page.category] %}
+        {% if other.order == next %}
+        <a class="next col mt-3" href="{{ site.baseurl }}{{ other.url }}">{{ other.title }} ></a>
+        {% endif %}
+        {% endfor %}
+    </div>
+</div>
+
