--- a/docs/css/colors.css
+++ b/docs/css/colors.css
@@ -1,7 +1,7 @@
 :root {
-  --color-primary: #f76c16;
-  --color-primary-active: #e75c16;
-  --color-primary-hover: #d74c16;
+  --color-primary: #e75016;
+  --color-primary-active: #c73016;
+  --color-primary-hover: #d74016;
   --color-secondary: #f7a816;
   --color-accent: #0e95e3;
   --color-accent-light: #f5fcff;
