--- a/docs/_layouts/main.html
+++ b/docs/_layouts/main.html
@@ -5,6 +5,7 @@
         <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/css/fonts_responsive.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/carbon.css">
     </head>
     <body>
         {% include header.html %}
