--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -2,10 +2,15 @@
 layout: main
 ---
 
-<div class="page-header border-bottom has-divider pb-3">
-    <h1 class="d-inline-block mt-1 mb-0 mr-2">{{ page.title }}</h1>
-    {% if page.description %}<span class="mr-2">{{ page.description }}</span>{% endif %}
-    <span><a href="https://github.com/{{ site.author.github }}/{{ site.github_repo }}/edit/{{ site.github_branch }}/docs/{{ page.path }}">[edit this page]</a></span>
+<div class="page-header border-bottom has-divider pb-3 d-flex flex-column flex-sm-row flex-nowrap align-items-start">
+    <div class="flex-grow-1">
+        <h1 class="d-inline-block mt-1 mb-0 mr-2">{{ page.title }}</h1>
+        {% if page.description %}<div><span class="mr-2">{{ page.description }}</span></div>{% endif %}
+        <div><span><a href="https://github.com/{{ site.author.github }}/{{ site.github_repo }}/edit/{{ site.github_branch }}/docs/{{ page.path }}">[edit this page]</a></span></div>
+    </div>
+    <div class="flex-shrink-0 pt-2 pl-sm-2">
+        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CE7DL27Y&placement=natario1githubio" id="_carbonads_js"></script>
+    </div>
 </div>
 <div class="page my-4">
     {{ content }}
