--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -169,6 +169,8 @@
         <attr name="cameraRequestPermissions" format="boolean|reference"/>
         <attr name="cameraExperimental" format="boolean|reference" />
 
+        <attr name="cameraOverlayHardwareCanvas" format="boolean"/>
+
     </declare-styleable>
 
     <declare-styleable name="CameraView_Layout">
