Add flag to disable automatic gesture handling

--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -36,6 +36,8 @@
         <attr name="cameraPreviewFrameRate" format="integer|reference" />
         <attr name="cameraPreviewFrameRateExact" format="boolean" />
 
+        <attr name="cameraGesturesEnabled" format="boolean"/>
+
         <attr name="cameraGestureTap" format="enum">
             <enum name="none" value="0" />
             <enum name="autoFocus" value="1" />
